src/test/ui/error-codes/E0165.stderr
error[E0165]: irrefutable while-let pattern
  --> $DIR/E0165.rs:15:15
   |
15 |     while let Irrefutable(x) = irr { //~ ERROR E0165
   |               ^^^^^^^^^^^^^^ irrefutable pattern

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0165"
